resources/styles.css
/* ... */
  
/* Picture */
.picture{
    /* border: 1px solid black; */
    border-radius: 100%;
    height: 13vw;
    width: 13vw;
    background-size: cover;
    background-position:center;
    background-image: url('https://media-exp1.licdn.com/dms/image/C4D03AQEGhZW3N92fWA/profile-displayphoto-shrink_800_800/0/1572886160038?e=2147483647&v=beta&t=hKWeq0Urjn1A7Tnz44uDimXzhWl3-bEM_tfqtEsQR0o');
}
  
/* Container for music and skills */
.misc{
    /* border: 1px solid blue; */
    width:60%;
    height:90%;
    display:flex;
    flex-direction:column;
    justify-content:space-between;
}
  
.misc > *{
    display: flex;
    align-items: center;
    justify-content: space-around;  
    width:100%;
}

/* Facts about me */
.about-me{
    /* border: 1px solid red; */
    padding: 0 1rem 1rem 1rem ;
    align-items: flex-start;
    font-size: .9rem;
}

.about-me > *{
    margin:.5rem;
}

/* Skills/languages */
.skills{
    height: 47%;
    width: 100%;
    flex-direction: column;
}

.languages{
    /* border: 1px solid yellow; */
    display: flex;
    flex-wrap: wrap;
    height: 75%;
    width: 85%;
}

.skill{
    /* border: 1px solid green; */
    margin: 0 1rem;
    border-radius: 100%;
    width: 4vw;
    height: 4vw;
    background-position: center;
    background-size: cover;
    transition: all 1s;
}

.skill:hover{
    transform: rotateY(180deg);
}

#css{
    background-image: url(../resources/images/skills/css3-logo-png-transparent.png);
}

#html{
    background-image: url(../resources/images/skills/html.png);
}

#js{
    background-image: url(../resources/images/skills/javascript.png);
}

#figma{
    background-image: url(../resources/images/skills/figma.png);
}

#git{
    background-image: url(../resources/images/skills/git.png);
}

#github{
    background-image: url(../resources/images/skills/github.png);
}

#java{
    background-image: url(../resources/images/skills/java.png);
}

#python{
    background-image: url(../resources/images/skills/python.png);
}

/* Contact Page */
.contact{
    /* border: 1px solid yellow; */
    background-color: rgb(116, 92, 133);;
    flex-direction: row;
}

h2{
    font-size: 2.25rem;
    position: absolute;
    bottom: 3rem;
    left: 4rem;
}

.letsConnect,.contactFields{
    /* border: 1px solid black; */
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50%;
    height: 80%;
}

.contactFields{
    /* border: 1px solid yellow; */
    font-size: 1.5rem;
}

/* Let's Connect */
.contact-content{
    /* border: 1px solid yellow; */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 20%;
    width: 80%;
}

.contact-content > h1{
    align-self: center;
}

.line-deco-one, .line-deco-two{
    /* border: 1px solid red; */
    background-color: #eb8015;
    width: 30%;
    height: 3%;
}

.line-deco-two{
    align-self: flex-end;
}

/* Contact form */
form{
    /* border: 1px solid blue; */
    display: flex;
    justify-content: center;
    z-index: 1;
    width: 50%;
    height: 60%;
    display: flex;
    flex-direction: column;
}

input, textarea{
    color: white;
    border: 2px solid #eb8015;
    border-radius: 10px;
    background-color: rgb(129, 118, 141);
}

input{
    margin-bottom: 1rem;
    height: 10%;
}

textarea{
    height: 30%;
    margin-bottom: 3rem;
}

input:focus, textarea:focus{
    outline: none;
}

label{
    margin-bottom: .5rem;
}

/* Submit Button */
button::before{
    /* border: 1px solid black; */
    position: absolute;
    top: 0;
    left: 0;
    content: '';
    height:101%;
    width: 0%;
    background:#eb8015;
    opacity: .2;
    z-index: -1;
    transition: width 1s;
}

button:hover::before{
    width: 105%;
}

button{
    background-color: white;
    color: rgb(66, 21, 66);
    z-index: 0;
    position: relative;
    cursor: pointer;
    overflow: hidden;
    border: 0;
    border-radius: 40px;
    height: 10%;
    width: 40%;
    align-self: center;
    box-shadow: 6px 6px 0px 1px #eb8015;
}

button > p {
    z-index: 1;
}

button:active{
    transform: translate(6px, 6px);
    box-shadow: none;
}

/* Contact Divider */
.divider-contact {
    position: absolute;
    top: -1px;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
    transform: rotate(180deg);
}

.divider-contact svg {
    position: relative;
    display: block;
    width: calc(142% + 1.3px);
    height: 500px;
}

.divider-contact .shape-fill {
    fill:#3a2d44;;
}

/* footer */
.footer{
    width: 100vw;
    height: 8vh;
    background-color: rgb(57, 38, 73);
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Animations */

@keyframes wexpand{
    100%{
        width:17.5vw;
    }
}

@keyframes moveMiddle{
    100%{
        transform: translateX(-5.8vw);
    }
}

@keyframes moveEnd{
    100%{
        transform: translateX(-11.7vw);
    }
}

@keyframes appears{
    100%{
      opacity:1;
    }
}

@keyframes stretchUp{
    to{
        height: 150%;
    }
}

@keyframes stretch{
    to{
        width: 100%;
    }
}

@keyframes fade{
    from {opacity: .5} 
    to {opacity: 1}
}

/* Media queries */
@media screen and (max-width:1470px){
    /* Reducing font sizes For any screen sizes less than 1470 */
   h1{
    font-size: 2.5rem;
   }

   .desc{
    font-size: 1.5rem;
   }

   .hello > span{
    font-size: 7rem;
   }

   .img-container::after{
    font-size: 2rem;
   }

   .about-me{
    font-size: .8rem;
   }
   
   
}
/* ... */

